--- a/part2/exchangerate-api/src/index.css
+++ b/part2/exchangerate-api/src/index.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 body {
-  margin: 1rem;
+  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -39,7 +39,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  /* padding: 0.3em; */
+  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -53,15 +53,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-.notification {
-  color: rgb(144, 228, 186);
-  background-color: grey;
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
-  padding: 0.2rem 1rem;
-  margin: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
